--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -1,14 +1,3 @@
-:root {
-  --black: #2f3740;
-  --grey: #586069;
-  --teal: #009688;
-  --light-grey-1: #6a737d;
-  --light-grey-2: #e1e4e8;
-  --font-familly: Ubuntu Regular;
-  --transition--generic: 0.2s all ease-in-out;
-  --none: none;
-}
-
 @font-face {
   font-family: Ubuntu Regular;
   font-display: swap;
@@ -42,16 +31,16 @@ h4, h5, h6 {
 
 a {
   text-decoration: none;
-  transition: var(--transition--generic);
+  transition: 0.2s all ease-in-out;
 }
 
 a:hover {
   text-decoration: underline;
-  transition: var(--transition--generic);
+  transition: 0.2s all ease-in-out;
 }
 
 a:active {
-  transition: var(--transition--generic);
+  transition: 0.2s all ease-in-out;
 }
 
 #app {
@@ -232,11 +221,11 @@ a:active {
 }
 
 .theme--light {
-  transition: var(--transition--generic);
+  transition: 0.2s all ease-in-out;
 }
 
 .theme--dark {
-  transition: var(--transition--generic);
+  transition: 0.2s all ease-in-out;
 }
 
 .table__row-text {
